--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div class="board">
-            <div class="box" data-box-index="1">0</div>
-            <div class="box" data-box-index="2">X</div>
+            <div class="box" data-box-index="1"></div>
+            <div class="box" data-box-index="2"></div>
             <div class="box" data-box-index="3"></div>
             <div class="box" data-box-index="4"></div>
             <div class="box" data-box-index="5"></div>
@@ -21,5 +21,6 @@
             <div class="box" data-box-index="9"></div>
         </div>
     </div>
+    <script src="./app.js"></script>
 </body>
 </html>
