Add and Style Reset button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <div class="box" data-box-index="8"></div>
             <div class="box" data-box-index="9"></div>
         </div>
+        <button id="reset-btn">Reset</button>
+    </div>
+    <div class="footer">
+        <div id="turn-announcer"></div>
+        <div id="winner-announcer"></div>
     </div>
     <script src="./app.js"></script>
 </body>
